restored headless doll box

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body, a:hover {cursor: url(http://cur.cursors-4u.net/others/oth-2/oth134.cur), a
     <div class="lazy_load noclip loaded"><img src="./idc_files/552d19ff067d7b69f940f60f" style="width: 500px; margin-left: 0px; margin-top: 0px; transition-delay: 0.5s; opacity: 0;" class="content loaded"><img src="./idc_files/552d19ff067d7b69f940f60f" style="width: 1026px; margin-left: 0px; margin-top: 0px;" class="content loaded"></div></div>
    
    <!-- Headless doll container -->
-   <!-- <div class="happ hive_image crop_box" id="aba13e79" style="left: 219px; top: 113px; z-index: 7; opacity: 1; width: 856px; height: 743px; border-radius: 0px;" data-orig="//media.tnh.me/52d6ed4d082d774e43176934/5585281d067d7b04717002c5"> -->
+   <div class="happ hive_image crop_box" id="aba13e79" style="left: 219px; top: 113px; z-index: 7; opacity: 1; width: 856px; height: 743px; border-radius: 0px;" data-orig="//media.tnh.me/52d6ed4d082d774e43176934/5585281d067d7b04717002c5">
    
    <!-- Headless doll -->
    <div class="lazy_load noclip loaded"><img src="./idc_files/5585281d067d7b04717002c5" style="width: 856px; margin-left: 0px; margin-top: 0px; transition-delay: 0.5s; opacity: 0;" class="content loaded">
